# pafi-python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  lammps_options.cmake  requirements.txt
core/: CustomSimulator.cpp  CustomSimulator.hpp  GeneralSimulator.cpp  GeneralSimulator.hpp  GenericGatherer.hpp  GenericSimulator.cpp  GenericSimulator.hpp  LAMMPSSimulator.cpp  LAMMPSSimulator.hpp  Master.hpp  Parser.cpp  Parser.hpp  Spline.cpp  Spline.hpp  Tester.hpp  Utils.hpp
doc/: INSTALL.md  TUTORIAL.md
examples/: .gitignore  CompleteConfiguration.xml  CustomConfiguration.xml  DefaultTest.py  PartialConfiguration.xml  PlottingExamples.ipynb  README.md  StandardConfiguration.xml  StandardTest.py  TestRoutines.py  UsageExamples.py
examples/configuration_files/: CompleteConfiguration_TEST.xml  CustomConfiguration_TEST.xml
examples/custom/: .gitignore  Process-PAFI-Results.ipynb  config.xml  log.lammps.0  log.lammps.1  run.sh
examples/custom/dumps/: params_0  raw_data_output_0.csv
examples/standard/: .gitignore  Process-PAFI-Results.ipynb  config.xml  run.sh
examples/standard/dumps/: params_0  raw_data_output_0.csv
examples/ti/: .gitignore  Process-PAFI-Results.ipynb  config.xml
examples/ti_W/: config.xml
pafi/: __init__.py  pafi.cpp
pafi-core/: LAMMPSSimulator.cpp
pafi-custom/: CustomGatherer.hpp  CustomSimulator.hpp
pafi-pafi/custom/: CustomGatherer.hpp
pafi/core/: BaseGatherer.py  BaseManager.py  BaseParser.py  BaseWorker.py  DefaultConfigurations.xml  GenericSimulator.cpp  GenericSimulator.hpp  GenericWorker.py  LAMMPSSimulator.cpp  LAMMPSWorker.py  Manager.py  Master.hpp  PAFIManager.py  PAFIWorker.py  Parser.cpp  Parser.hpp  Parser.py  TestConfigurations.xml  testing.ipynb
pafi/custom/: CustomSimulator.hpp  pafi.cpp
pafi/managers/: BaseManager.py  PAFIManager.py
pafi/pafi-custom/: pafi.cpp  pafi.hpp
pafi/pafi-standard/: pafi.cpp  pafi.hpp
pafi/parsers/: BaseParser.py  DefaultConfiguration.xml  PAFIParser.py  Parser.py
pafi/path/: pafi-path-test.cpp
pafi/pycore/: BaseParser.py  BaseWorker.py  DefaultConfigurations.xml  Gatherer.py  LAMMPSWorker.py  Manager.py  Parser.py  log.lammps  testing.ipynb
pafi/results/: BaseGatherer.py  Gatherer.py  ResultsHolder.py  ResultsProcessor.py
pafi/workers/: BaseWorker.py  LAMMPSWorker.py  PAFIWorker.py
python/: ProcessPAFI.py
testing/: CustomConfiguration.xml  CustomTest.py  NotebookTest.ipynb  Process-PAFI-Results-NOT-MODIFIED.ipynb  SimpleTest.py  StandardConfiguration.xml  StandardTest.py  Test.ipynb  TestConfigurations.xml  log.lammps.0  log.lammps.1  test.py
testing/dumps/: config_0.xml
unittests/: TestRoutines.py
